# spsid-server

./: .gitignore  ChangeLog  Makefile.am  configure.ac  spsid-server.pc.in
doc/: siam_storage.md
etc/: spsid_siteconfig.pl
lib/: SPSID.pm
lib/SPSID/: Client.pm  Server.pm  Util.pm
lib/SPSID/Backend/: SQL.pm
lib/SPSID/Server/Backend/: SQL.pm
setup_tools/: install_cpanm_prereq.sh  substvars.sh.in
share/: Makefile.am
share/conf_defaults/: spsid_config.pl  spsid_config.pl.in
share/db_utils/: spsid_db_dump.in  spsid_db_empty.in  spsid_db_restore.in
share/psgi/: spsid_jsonrpc.fcgi.in  spsid_jsonrpc.psgi.in
share/sql/: cleanup_deleted_objects.sql  spsid_schema.ansi.sql  spsid_schema.mysql.sql
t/: 00-load.t  10_spsid_client.t  20_util_sync.t  30_siam_driver.t  50_spsid_client.t  60_util_sync.t  delete_db.sh  init_db.sh  run_tap_harness.pl  run_tests.sh  set_env.sh  siam_test_data.yaml  start_plack.sh  stop_plack.sh  test_spsid_siteconfig.pl
